[gd_scene load_steps=8 format=3 uid="uid://dom5tyfk1in3q"]

[ext_resource type="Script" path="res://game/scenes/debug/CharacterOffsetter.gd" id="1_q8ujq"]
[ext_resource type="Texture2D" uid="uid://dave1imbc216x" path="res://assets/images/leGrid.png" id="3_0k3qt"]
[ext_resource type="Shader" path="res://game/resources/shaders/scroll.gdshader" id="3_f84mi"]
[ext_resource type="Texture2D" uid="uid://daba84ejgj2x1" path="res://assets/images/ui/cross.png" id="4_7buq4"]
[ext_resource type="FontFile" uid="uid://dnssbi7hjccim" path="res://assets/fonts/vcr.ttf" id="4_e8b0o"]
[ext_resource type="Script" path="res://game/objects/ui/Icon.gd" id="5_36ais"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3m81g"]
shader = ExtResource("3_f84mi")
shader_parameter/direction = Vector2(1, 1)
shader_parameter/speed_scale = 0.3

[node name="CharacterOffsetting" type="Node2D"]
script = ExtResource("1_q8ujq")

[node name="Backdrop" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_3m81g")
position = Vector2(634, 364)
texture = ExtResource("3_0k3qt")
region_enabled = true
region_rect = Rect2(0, 0, 1300, 800)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Reset" type="Button" parent="UILayer"]
modulate = Color(1, 0, 0, 1)
offset_left = 1133.0
offset_top = 344.0
offset_right = 1250.0
offset_bottom = 375.0
focus_mode = 0
text = "RESET"

[node name="Save" type="Button" parent="UILayer"]
modulate = Color(0, 1, 1, 1)
offset_left = 950.0
offset_top = 345.0
offset_right = 1067.0
offset_bottom = 376.0
focus_mode = 0
text = "SAVE Json"

[node name="Main" type="ColorRect" parent="UILayer"]
custom_minimum_size = Vector2(300, 300)
offset_left = 950.0
offset_top = 15.0
offset_right = 1250.0
offset_bottom = 335.0
color = Color(0.194349, 0.194349, 0.194349, 1)

[node name="Shadow" type="Panel" parent="UILayer/Main"]
show_behind_parent = true
layout_mode = 0
offset_left = -238.0
offset_right = -2.0
offset_bottom = 134.0

[node name="Frame" type="HSlider" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_left = 7.0
offset_top = 108.0
offset_right = 228.0
offset_bottom = 124.0
focus_mode = 0
max_value = 10.0

[node name="Txt" type="Label" parent="UILayer/Main/Shadow/Frame"]
layout_mode = 0
offset_left = 2.0
offset_top = -28.0
offset_right = 96.0
offset_bottom = -5.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Frame: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimSelect" type="MenuButton" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_left = 41.0
offset_top = 16.0
offset_right = 199.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Animation"
flat = false

[node name="Anim" type="Label" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_left = 78.0
offset_top = 48.0
offset_right = 172.0
offset_bottom = 71.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "none"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="CheckBox" parent="UILayer/Main"]
layout_mode = 0
offset_left = 150.0
offset_top = 280.0
offset_right = 293.0
offset_bottom = 311.0
focus_mode = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "Facing Left"

[node name="ScaleBox" type="SpinBox" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 280.0
offset_right = 138.0
offset_bottom = 311.0
min_value = 0.1
max_value = 10.0
step = 0.01
value = 1.0
prefix = "Scale:"

[node name="IconSelect" type="MenuButton" parent="UILayer/Main"]
layout_mode = 0
offset_left = 11.0
offset_top = 55.0
offset_right = 123.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Icon"
flat = false

[node name="Highlight" type="ColorRect" parent="UILayer/Main/IconSelect"]
custom_minimum_size = Vector2(105, 105)
layout_mode = 0
offset_left = -940.0
offset_top = 520.0
offset_right = -835.0
offset_bottom = 625.0
color = Color(1, 1, 0, 0.392157)

[node name="Icon" type="Sprite2D" parent="UILayer/Main/IconSelect"]
position = Vector2(-939, 472)
script = ExtResource("5_36ais")

[node name="CharacterSelect" type="MenuButton" parent="UILayer/Main"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 169.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Character"
flat = false

[node name="CurCharLabel" type="Label" parent="UILayer/Main/CharacterSelect"]
layout_mode = 0
offset_left = 165.0
offset_top = 3.0
offset_right = 255.0
offset_bottom = 26.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "bf"
vertical_alignment = 1

[node name="Pos" type="Label" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 195.0
offset_right = 151.0
offset_bottom = 218.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 16
text = "Position Offset"

[node name="X" type="SpinBox" parent="UILayer/Main/Pos"]
layout_mode = 0
offset_top = 28.0
offset_right = 83.0625
offset_bottom = 59.0
min_value = -999.0
max_value = 999.0
alignment = 1
update_on_text_changed = true

[node name="Y" type="SpinBox" parent="UILayer/Main/Pos"]
layout_mode = 0
offset_left = 90.0
offset_top = 28.0
offset_right = 173.063
offset_bottom = 59.0
min_value = -999.0
max_value = 999.0
alignment = 1
update_on_text_changed = true

[node name="Cam" type="Label" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 115.0
offset_right = 151.0
offset_bottom = 138.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 16
text = "Camera Offset"

[node name="X" type="SpinBox" parent="UILayer/Main/Cam"]
layout_mode = 0
offset_top = 28.0
offset_right = 83.0625
offset_bottom = 59.0
min_value = -999.0
max_value = 999.0
alignment = 1
update_on_text_changed = true

[node name="Y" type="SpinBox" parent="UILayer/Main/Cam"]
layout_mode = 0
offset_left = 90.0
offset_top = 28.0
offset_right = 173.063
offset_bottom = 59.0
min_value = -999.0
max_value = 999.0
alignment = 1
update_on_text_changed = true

[node name="Animations" type="Node2D" parent="UILayer"]

[node name="CurData" type="Control" parent="UILayer"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 432.0
offset_top = 15.0
offset_right = 681.0
offset_bottom = 182.0

[node name="Anim" type="Label" parent="UILayer/CurData"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.648
anchor_bottom = 0.14
offset_left = -8.0
offset_top = -3.0
offset_right = 84.992
offset_bottom = 0.379999
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "No Anim Playing"
horizontal_alignment = 1

[node name="Frame" type="Label" parent="UILayer/CurData"]
layout_mode = 0
offset_left = 24.0
offset_top = 31.0
offset_right = 210.0
offset_bottom = 80.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "Frame
? / ?"
horizontal_alignment = 1

[node name="Offset" type="Label" parent="UILayer/CurData"]
layout_mode = 0
offset_left = 47.0
offset_top = 98.0
offset_right = 182.0
offset_bottom = 121.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "[0 | 0]"
horizontal_alignment = 1

[node name="Warn" type="Label" parent="UILayer/CurData"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = -2.0
offset_top = 136.0
offset_right = 233.0
offset_bottom = 159.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "No .res file exists!"

[node name="Anim" type="ColorRect" parent="UILayer"]
custom_minimum_size = Vector2(300, 300)
offset_left = 950.0
offset_top = 385.0
offset_right = 1250.0
offset_bottom = 685.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="AnimSpeed" type="HSlider" parent="UILayer/Anim"]
layout_mode = 0
offset_left = 74.0
offset_top = 11.0
offset_right = 289.0
offset_bottom = 27.0
focus_mode = 0
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="UILayer/Anim/AnimSpeed"]
layout_mode = 0
offset_left = -65.0
offset_top = -4.0
offset_right = -6.0
offset_bottom = 19.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Speed"
vertical_alignment = 1

[node name="Weee!!" type="Label" parent="UILayer"]
visible = false
offset_left = 10.0
offset_top = 680.0
offset_right = 561.0
offset_bottom = 703.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Successfully SAVED json at '../characters/data/%s'"

[node name="Cam" type="Camera2D" parent="."]
position = Vector2(624, 360)

[node name="Point" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(568, 368)
scale = Vector2(5, 5)
texture = ExtResource("4_7buq4")

[connection signal="pressed" from="UILayer/Save" to="." method="save_pressed"]
[connection signal="value_changed" from="UILayer/Main/Shadow/Frame" to="." method="shadow_frame_change"]
